<resources>
    <string name="app_name">UCLove</string>
    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Paramètres</string>
    <string name="button_enter">Entrer au Paradis</string>
    <string name="label_current_selection">Selection actuelle: </string>
    <string name="label_default_selection">Aucun</string>
    <string name="title_activity_my_list">Menu</string>
    <string name="login_activity">Identifiant</string>
    <string name="friends_activity">Amis</string>
    <string name="friendpanel_activity">Panneau d amis </string>
    <string name="Login">Identifiant:</string>
    <string name="Password">Mot de passe:</string>
    <string name="Login_status">Statut de l identifiant</string>
    <string name="friends">Amis</string>
    <string name="friend">Amis</string>
    <string name="gender">Genre</string>
    <string name="age">Age</string>
    <string name="hair">Cheveux</string>
    <string name="eyes">Yeux</string>
    <string name="location">Ville</string>
    <string name="inclination">Préference</string>
    <string name="profile_activity">Activité du profil</string>
    <string name="gallery_activity">Activité de la gallerie</string>
    <string name="people_activity">Personne</string>
    <string name="menu_meeting">Menu rencontre</string>
    <string name="calendar_select">Selection calendrier</string>
    <string name="calendar_set_disp">Set disposition</string>
    <string name="calendar_set_rdv">Set rdv</string>
    <string name="choose_friend">Choisir ami</string>
    <string name="chat_activity">Activité chat</string>
    <string name="send">Envoyé</string>
    <string name="profile">Profil</string>
    <string name="preferences">Preferences</string>
    <string name="people">Personnes</string>
    <string name="request">Requete</string>
    <string name="messages">Messages</string>
    <string name="meet">Rencontre</string>
    <string name="filter_by">Filtrer par</string>
    <string name="value">Valeur</string>
    <string name="for_key">Pour</string>
    <string name="keyword">Mot clé</string>
    <string name="random_Search">Recherche aléatoire</string>
    <string name="default_Profil">Profil par défaut</string>
    <string name="male">Male</string>
    <string name="female">Femelle</string>
    <string name="brown">Brun</string>
    <string name="black">Noir</string>
    <string name="blond">Blond</string>
    <string name="red">Roux</string>
    <string name="Brown">Marron</string>
    <string name="blue">Bleue</string>
    <string name="green">Vert</string>
    <string name="gallery">Gallerie</string>
    <string name="friendmessage">Chat avec tes amis !</string>
    <string name="firstNameUser">Prénom</string>
    <string name="nameUser">Nom</string>
    <string name="ageUser">Age</string>
    <string name="locationUser">Ville</string>
    <string name="age_activity">Age activité</string>
    <string name="name_activity">Name activité</string>
    <string name="firstname_activity">Prénom activité</string>
    <string name="location_activity">Ville activité</string>
    <string name="name">Pseudo</string>
    <string name="rdv">Rendez-vous</string>
    <string name="calendar_activity">Calendrier</string>
    <string name="rdvactivity">Rendez vous</string>
    <string name="validate">Valider</string>
    <string name="time">Temps</string>
    <string name="place">Lieu</string>
    <string name="request_activity">Requêtes</string>
    <string name="incoming_activity">Requêtes entrantes</string>
    <string name="outgoing_activity">Requêtes sortantes</string>
    <string name="addchatactivity">Add chat</string>
    <string name="t">hh:mm (ex: 15:8)</string>
    <string name="rdv_activity">RDV</string>

</resources>
