<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    android:paddingTop="20px"
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:paddingLeft="20px"
            android:paddingTop="20px"
            />
        <RadioGroup
            android:id="@+id/groupGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/male"
            android:orientation="horizontal"
            android:paddingLeft="20px"
            android:paddingTop="20px"
        >
            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
            />
            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
            />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/ageOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ok"
            android:paddingLeft="20px"
            android:paddingTop="20px"
        />
        <EditText
            android:id="@+id/age"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:inputType="numberDecimal"
            android:paddingTop="20px"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hair"
            android:paddingLeft="20px"
            android:paddingTop="20px"
            />
        <RadioGroup
            android:id="@+id/groupHairs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/brownHairs"
            android:orientation="horizontal"
            android:paddingLeft="20px"
            android:paddingTop="20px"
            >
            <RadioButton
                android:id="@+id/brownHair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brown"
            />
            <RadioButton
                android:id="@+id/blackHair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/black"
            />
            <RadioButton
                android:id="@+id/blondHair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blond"
            />
            <RadioButton
                android:id="@+id/redHair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red"
            />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eyes"
            android:paddingLeft="20px"
            android:paddingTop="20px"
        />
        <RadioGroup
            android:id="@+id/groupEye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/brownEyes"
            android:orientation="horizontal"
            android:paddingLeft="20px"
            android:paddingTop="20px"
                >
            <RadioButton
                android:id="@+id/brownEye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Brown"
                />
            <RadioButton
                android:id="@+id/blueEye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue"
                />
            <RadioButton
                android:id="@+id/greenEye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/green"
                />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/locationOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ok"
            android:paddingLeft="20px"
            android:paddingTop="20px"
        />
        <EditText
            android:id="@+id/location"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            android:inputType="text"
            android:paddingTop="20px"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inclination"
            android:paddingLeft="20px"
            android:paddingTop="20px"
            />
        <RadioGroup
            android:id="@+id/groupInclination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/hetero"
            android:orientation="horizontal"
            android:paddingTop="20px"
            >
            <RadioButton
                android:id="@+id/hetero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hetero"
                />
            <RadioButton
                android:id="@+id/homo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Homo"
                />
            <RadioButton
                android:id="@+id/bi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bi"
                />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            android:paddingTop="20px"
        />
    </LinearLayout>
</LinearLayout>