<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20px"
        android:id="@+id/lol">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_by"
            android:textSize="40px"
            android:paddingRight="20px"/>
        <EditText
            android:layout_width="200px"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:background="@color/lightred"
            android:hint="@string/value"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/for_key"
            android:textSize="40px"
            android:paddingLeft="20px"
            android:paddingRight="20px"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:background="@color/lightred"
            android:paddingRight="20px"
            android:hint="@string/keyword" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lol2"
        android:layout_below="@id/lol"
        android:layout_centerHorizontal="true"
        android:paddingTop="100px"
        android:text="@string/random_Search"
        android:textSize="40px"
        android:paddingRight="20px"/>

    <ImageButton
            android:layout_width="100px"
            android:layout_height="100px"
            android:scaleType="fitXY"
            android:maxHeight="100dp"
            android:maxWidth="100dp"
            android:layout_toRightOf="@id/lol2"
            android:layout_alignBottom="@id/lol2"
            android:clickable="true"/>
    android:src="@drawable/ic_action_playback_repeat"


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lol2"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:paddingTop="50px"
        android:id="@+id/lol3">

        <ImageView
            android:layout_width="100px"
            android:layout_height="100px"
            android:clickable="true"/>
        android:src="@drawable/ic_action_heart"

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_Profil"
            android:textSize="60px"
            android:layout_gravity="center"/>
        <ImageView
            android:layout_width="100px"
            android:layout_height="100px"
            android:clickable="true"/>
        android:src="@drawable/ic_action_undo"

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lol3"
        android:src="@drawable/firendpic"
        android:layout_centerHorizontal="true"
        android:id="@+id/lol4"/>

    <LinearLayout
        android:layout_width="380px"
        android:layout_height="wrap_content"
        android:layout_below="@id/lol4"
        android:layout_gravity="left"
        android:orientation="vertical"
        android:id="@+id/lol5"
        android:paddingTop="50px"
        android:paddingLeft="50px">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="40px"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hair"
            android:textSize="40px"
            android:paddingTop="20px"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="40px"
            android:paddingTop="20px"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="380px"
        android:layout_height="wrap_content"
        android:layout_below="@id/lol4"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:orientation="vertical"
        android:paddingTop="50px"
        android:paddingRight="50px">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Age"
            android:textSize="40px"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eyes"
            android:textSize="40px"
            android:paddingTop="20px"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preferences"
            android:textSize="40px"
            android:paddingTop="20px"/>
    </LinearLayout>

</RelativeLayout>