<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:paddingLeft="20px"
        android:paddingTop="50px"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/age"
        android:text="@string/age"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingLeft="20px"
        android:layout_alignLeft="@id/gender"
        android:paddingTop="150px"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hair"
        android:text="@string/hair"
        android:layout_alignLeft="@id/gender"
        android:paddingTop="250px"
        android:paddingLeft="20px"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eyes"
        android:text="@string/eyes"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingTop="350px"
        android:paddingLeft="20px"
        android:layout_alignLeft="@id/gender"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/location"
        android:text="@string/location"
        android:paddingTop="450px"
        android:paddingLeft="20px"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignLeft="@id/gender"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inclination"
        android:text="@string/inclination"
        android:paddingTop="550px"
        android:paddingLeft="20px"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignLeft="@id/gender"
        />
    <ImageView
        android:layout_width="500px"
        android:layout_height="500px"
        android:id="@+id/friend_pic"
        android:layout_below="@id/inclination"
        android:src="@drawable/firendpic"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="550px"
        android:id="@+id/gender_value"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignBaseline="@id/gender"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="550px"
        android:id="@+id/age_value"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignBaseline="@id/age"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="550px"
        android:id="@+id/hair_value"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignBaseline="@id/hair"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="550px"
        android:id="@+id/eyes_value"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignBaseline="@id/eyes"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="550px"
        android:id="@+id/location_value"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignBaseline="@id/location"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="550px"
        android:id="@+id/inclination_value"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignBaseline="@id/inclination"
        />


</RelativeLayout>
